# pixellot

./: .gitignore  leap.yaml  leap_binder.py  leap_custom_test.py  pyproject.toml  tensorleap_run_script.py
models/: model.h5  model.onnx
pixellot_tl/: config.py  config.yaml  metrics.py
pixellot_tl/utils/: aws_utils.py  data_utils.py
